altered some alignment issues on the second section

--- a/src/components/expone/expone.scss
+++ b/src/components/expone/expone.scss
@@ -355,7 +355,7 @@
         @include mobile{
             margin-top: 5px;
             text-align: center;
-            margin-left: 20px;
+            margin-left: 40px;
    
         }
            margin-top: 20px;
